<resources>
    <string name="app_name">FamilyBudget</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Въведи текст</string>
    <string name="button_send">Изпрати</string>

    <string name="label_date">Дата</string>
    <string name="label_price">Цена</string>
    <string name="label_description">Описание</string>
    <string name="label_add">Добави</string>
    <string name="label_category">Категория</string>
    <string name="label_shop">Магазин</string>

    <string name="title_activity_display_message">My message</string>
    <string name="title_activity_add_expense">AddExpenseActivity</string>
    <string name="title_activity_display_expense">DisplayExpenseActivity</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>
</resources>
